fixed layout bug in player state

--- a/imports/client/tournaments/team.scss
+++ b/imports/client/tournaments/team.scss
@@ -74,7 +74,6 @@
             font-size:0.8em;
         }
         .participant-state {
-            width:56px;
             text-align:left;
             button.btn {
                 text-align:left;
